tests/machine/x/pascal/dataset_where_filter.error
line: 60
error: fpc error: exit status 1
Free Pascal Compiler version 3.2.2+dfsg-32 [2024/01/05] for x86_64
Copyright (c) 1993-2021 by Florian Klaempfl and others
Target OS: Linux for x86-64
Compiling /workspace/mochi/tests/machine/x/pascal/dataset_where_filter.pas
dataset_where_filter.pas(34,13) Error: Illegal type conversion: "{Array Of Const/Constant Open} Array of TFPGMap$2$crcA49C6E68" to "TArray$1$crcE0B4E8C7"
dataset_where_filter.pas(36,37) Error: identifier idents no member "name"
dataset_where_filter.pas(37,36) Error: identifier idents no member "age"
dataset_where_filter.pas(38,43) Error: identifier idents no member "age"
dataset_where_filter.pas(42,23) Error: identifier idents no member "age"
dataset_where_filter.pas(43,37) Error: Incompatible types: got "{Array Of Const/Constant Open} Array of TFPGMap$2$crcA49C6E68" expected "TArray$1$crcE0B4E8C7"
dataset_where_filter.pas(43,31) Error: Incompatible types: got "TFPGMap<System.Variant,System.Variant>" expected "TFPGMap<System.ShortString,System.Variant>"
dataset_where_filter.pas(49,17) Error: identifier idents no member "is_senior"
dataset_where_filter.pas(51,20) Error: Incompatible types: got "Constant String" expected "LongInt"
dataset_where_filter.pas(55,20) Error: Incompatible types: got "Constant String" expected "LongInt"
dataset_where_filter.pas(57,22) Error: identifier idents no member "name"
dataset_where_filter.pas(57,51) Error: identifier idents no member "age"
dataset_where_filter.pas(60) Fatal: There were 12 errors compiling module, stopping
Fatal: Compilation aborted
Error: /usr/bin/ppcx64 returned an error exitcode

